# FFMPEG_HELLOWORLD

./: CMakeLists.txt
libs/FFMPEG/: CMakeLists.txt
src/: main.cpp
